rocm-cpp/include/rocm_cpp/ck_gemm.h

typedef enum {
    RCPP_OK           = 0,
    RCPP_INVALID_ARG  = 1,
    RCPP_UNSUPPORTED  = 2,
    RCPP_HIP_ERROR    = 3,
    RCPP_INTERNAL     = 4,
} rcpp_status_t;
typedef struct rcpp_ck_gemm_handle rcpp_ck_gemm_handle_t;
rcpp_status_t
rcpp_ck_gemm_create(int M, int N, int K, rcpp_ck_gemm_handle_t** handle_out);
void
rcpp_ck_gemm_destroy(rcpp_ck_gemm_handle_t* handle);
rcpp_status_t
rcpp_ck_gemm_run(rcpp_ck_gemm_handle_t* handle,
                 const void* A_dev, const void* B_dev_packed, void* C_dev,
                 void* stream);
rcpp_status_t
rcpp_ternary_pack_pk_i4(const int8_t* ternary_host,
                        int8_t* packed_host,
                        int K, int N);
const char*
rcpp_ck_gemm_instance_string(const rcpp_ck_gemm_handle_t* handle);
rcpp_status_t
rcpp_ternary_gemv(const void* packed_weights_dev,   
                  const void* activations_i8_dev,   
                  float       activation_scale,     
                  const void* row_scales_dev,       
                  void*       output_dev,           
                  int M, int K,
                  void*       stream);              
rcpp_status_t
rcpp_ternary_gemv_halo(const void* packed_weights_dev,
                       const void* activations_i8_dev,
                       float       activation_scale,
                       const void* row_scales_dev,
                       void*       output_dev,
                       int M, int K,
                       void*       stream);
rcpp_status_t
rcpp_ternary_gemv_halo_f16(const void* packed_weights_dev,
                           const void* activations_i8_dev,
                           float       activation_scale,
                           const void* row_scales_dev,
                           void*       output_f16_dev,
                           int M, int K,
                           void*       stream);
rcpp_status_t
rcpp_ternary_gemv_sherry_f16(const void* packed_weights_dev,
                             const void* activations_i8_dev,
                             float       activation_scale,
                             const void* row_scales_dev,
                             void*       output_f16_dev,
                             int M, int K,
                             void*       stream);
rcpp_status_t
rcpp_ternary_gemv_tq1_halo_f16(const void* packed_weights_dev,
                               const void* activations_i8_dev,
                               float       activation_scale,
                               const void* row_scales_dev,
                               void*       output_f16_dev,
                               int M, int K_padded,
                               void*       stream);
rcpp_status_t
rcpp_quantize_fp16_to_i8(const void* x_fp16_dev, void* x_i8_dev,
                         float* scale_dev, int K, void* stream);
rcpp_status_t
rcpp_rmsnorm_fp16(const void* x_dev, const void* weight_dev, void* y_dev,
                  float eps, int K, void* stream);
rcpp_status_t
rcpp_rope_fp16(void* x_dev, int pos, float theta,
               int num_heads, int head_dim, void* stream);
rcpp_status_t
rcpp_silu_glu_fp16(const void* up_dev, const void* gate_dev, void* y_dev,
                   int N, void* stream);
rcpp_status_t
rcpp_relu2_glu_fp16(const void* gate_dev, const void* up_dev, void* y_dev,
                    int N, void* stream);
rcpp_status_t
rcpp_relu2_glu_rmsnorm_fp16(const void* gate_dev, const void* up_dev,
                            const void* ffn_sub_norm_dev,
                            void* y_dev, float eps, int N, void* stream);
rcpp_status_t
rcpp_embedding_lookup_fp16(const void* embedding_dev, int token_id,
                           void* y_dev, int hidden, void* stream);
rcpp_status_t
rcpp_residual_add_fp16(void* y_dev, const void* src_dev, int N, void* stream);
rcpp_status_t
rcpp_residual_add_fp32_from_fp16(void* x_fp32_dev, const void* src_fp16_dev,
                                 int N, void* stream);
rcpp_status_t
rcpp_rmsnorm_fp32_in_fp16_out(const void* x_fp32_dev, const void* weight_dev,
                              void* y_fp16_dev, float eps, int K, void* stream);
rcpp_status_t
rcpp_argmax_fp32(const void* logits_dev, void* out_idx_dev, int V, void* stream);
rcpp_status_t
rcpp_fp16_gemv(const void* W_dev, const void* x_dev, void* y_dev,
               int M, int K, void* stream);
rcpp_status_t
rcpp_fp32_to_fp16(const void* x_fp32_dev, void* y_fp16_dev, int N, void* stream);
rcpp_status_t
rcpp_top_k_fp32(void* logits_dev, int k, int V, void* stream);
rcpp_status_t
rcpp_softmax_fp32(void* logits_dev, int V, float temperature, void* stream);
rcpp_status_t
rcpp_sample_multinomial_fp32(const void* probs_dev, float r,
                             void* out_idx_dev, int V, void* stream);
rcpp_status_t
rcpp_kv_cache_attn_decode(const void* Q_dev, const void* K_dev, const void* V_dev,
                          void* out_dev,
                          int num_q_heads, int num_kv_heads, int head_dim,
                          int seq_len, float scale, void* stream);
rcpp_status_t
rcpp_kv_cache_attn_decode_fd(const void* Q_dev, const void* K_dev, const void* V_dev,
                             void* out_dev,
                             int num_q_heads, int num_kv_heads, int head_dim,
                             int seq_len, float scale, void* stream);
rcpp_status_t
rcpp_kv_cache_attn_prefill(const void* Q_dev, const void* K_dev, const void* V_dev,
                           void* out_dev,
                           int num_q_heads, int num_kv_heads, int head_dim,
                           int seq_len, float scale, void* stream);
rcpp_status_t
rcpp_kv_cache_attn_decode_i8(const void* Q_dev,
                             const void* K_i8_dev, const void* V_i8_dev,
                             const void* K_scales_fp16_dev, const void* V_scales_fp16_dev,
                             void* out_dev,
                             int num_q_heads, int num_kv_heads, int head_dim,
                             int seq_len, float scale, void* stream);
rcpp_status_t
rcpp_kv_cache_attn_prefill_i8(const void* Q_dev,
                              const void* K_i8_dev, const void* V_i8_dev,
                              const void* K_scales_fp16_dev, const void* V_scales_fp16_dev,
                              void* out_dev,
                              int num_q_heads, int num_kv_heads, int head_dim,
                              int seq_len, float scale, void* stream);
rcpp_status_t
rcpp_quantize_fp16_to_i8_rowscale(const void* x_fp16_dev, void* out_i8_dev,
                                  void* scale_fp16_out_dev,
                                  int num_rows, int row_len, void* stream);
rcpp_status_t
rcpp_standalone_gemm(const void* A_dev, const void* B_dev_packed, void* C_dev,
                     int M, int N, int K, void* stream);