crates/halo-bitnet-hip/src/ffi.rs


    // -------------------------------------------------------------------------
    // Phase 6 — KV cache attention
    // -------------------------------------------------------------------------
    pub fn rcpp_kv_cache_attn_decode(
        Q_dev: *const c_void,
        K_dev: *const c_void,
        V_dev: *const c_void,
        out_dev: *mut c_void,
        num_q_heads: c_int,
        num_kv_heads: c_int,
        head_dim: c_int,
        seq_len: c_int,
        scale: c_float,
        stream: *mut c_void,
    ) -> rcpp_status_t;

    pub fn rcpp_kv_cache_attn_decode_fd(
        Q_dev: *const c_void,
        K_dev: *const c_void,
        V_dev: *const c_void,
        out_dev: *mut c_void,
        num_q_heads: c_int,
        num_kv_heads: c_int,
        head_dim: c_int,
        seq_len: c_int,
        scale: c_float,
        stream: *mut c_void,
    ) -> rcpp_status_t;

    pub fn rcpp_kv_cache_attn_prefill(
        Q_dev: *const c_void,
        K_dev: *const c_void,
        V_dev: *const c_void,
        out_dev: *mut c_void,
        num_q_heads: c_int,
        num_kv_heads: c_int,
        head_dim: c_int,
        seq_len: c_int,
        scale: c_float,
        stream: *mut c_void,
    ) -> rcpp_status_t;

    pub fn rcpp_kv_cache_attn_decode_i8(
        Q_dev: *const c_void,
        K_i8_dev: *const c_void,
        V_i8_dev: *const c_void,
        K_scales_fp16_dev: *const c_void,
        V_scales_fp16_dev: *const c_void,
        out_dev: *mut c_void,
        num_q_heads: c_int,
        num_kv_heads: c_int,
        head_dim: c_int,
        seq_len: c_int,
        scale: c_float,
        stream: *mut c_void,
    ) -> rcpp_status_t;

    pub fn rcpp_kv_cache_attn_prefill_i8(
        Q_dev: *const c_void,
        K_i8_dev: *const c_void,
        V_i8_dev: *const c_void,
        K_scales_fp16_dev: *const c_void,
        V_scales_fp16_dev: *const c_void,
        out_dev: *mut c_void,
        num_q_heads: c_int,
        num_kv_heads: c_int,
        head_dim: c_int,
        seq_len: c_int,
        scale: c_float,
        stream: *mut c_void,
    ) -> rcpp_status_t;

    pub fn rcpp_quantize_fp16_to_i8_rowscale(
        x_fp16_dev: *const c_void,
        out_i8_dev: *mut c_void,
        scale_fp16_out_dev: *mut c_void,
        num_rows: c_int,
        row_len: c_int,
        stream: *mut c_void,
    ) -> rcpp_status_t;

    // -------------------------------------------------------------------------
    // Standalone (CK-free) prefill
    // -------------------------------------------------------------------------
    pub fn rcpp_standalone_gemm(
        A_dev: *const c_void,
        B_dev_packed: *const c_void,
        C_dev: *mut c_void,
        M: c_int,
        N: c_int,
        K: c_int,
        stream: *mut c_void,
    ) -> rcpp_status_t;
}

// -----------------------------------------------------------------------------
// Stub shims (no `link-rocm` feature) — every symbol returns RCPP_UNSUPPORTED.
//
// These have identical signatures to the extern block above, so the rest of
// the crate can call them without cfg gating at every call site. The linker
// sees pure Rust symbols and never references the native .so.
// -----------------------------------------------------------------------------
#[cfg(not(feature = "link-rocm"))]
mod stub {
    use super::*;

    macro_rules! stub_fn {
        ($name:ident ( $( $arg:ident : $ty:ty ),* $(,)? ) -> $ret:ty) => {
            #[inline]
            #[allow(unused_variables, non_snake_case)]
            pub unsafe extern "C" fn $name( $( $arg : $ty ),* ) -> $ret {
                RCPP_UNSUPPORTED
            }
        };
        ($name:ident ( $( $arg:ident : $ty:ty ),* $(,)? )) => {
            #[inline]
            #[allow(unused_variables, non_snake_case)]
            pub unsafe extern "C" fn $name( $( $arg : $ty ),* ) {}
        };
    }

    stub_fn!(rcpp_ck_gemm_create(
        M: c_int, N: c_int, K: c_int,
        handle_out: *mut *mut rcpp_ck_gemm_handle_t
    ) -> rcpp_status_t);

    stub_fn!(rcpp_ck_gemm_destroy(handle: *mut rcpp_ck_gemm_handle_t));

    stub_fn!(rcpp_ck_gemm_run(
        handle: *mut rcpp_ck_gemm_handle_t,
        A_dev: *const c_void, B_dev_packed: *const c_void, C_dev: *mut c_void,
        stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_ternary_pack_pk_i4(
        ternary_host: *const i8, packed_host: *mut i8, K: c_int, N: c_int
    ) -> rcpp_status_t);

    #[inline]
    #[allow(unused_variables)]
    pub unsafe extern "C" fn rcpp_ck_gemm_instance_string(
        _handle: *const rcpp_ck_gemm_handle_t,
    ) -> *const c_char {
        core::ptr::null()
    }

    stub_fn!(rcpp_ternary_gemv(
        packed_weights_dev: *const c_void, activations_i8_dev: *const c_void,
        activation_scale: c_float, row_scales_dev: *const c_void,
        output_dev: *mut c_void, M: c_int, K: c_int, stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_ternary_gemv_halo(
        packed_weights_dev: *const c_void, activations_i8_dev: *const c_void,
        activation_scale: c_float, row_scales_dev: *const c_void,
        output_dev: *mut c_void, M: c_int, K: c_int, stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_ternary_gemv_halo_f16(
        packed_weights_dev: *const c_void, activations_i8_dev: *const c_void,
        activation_scale: c_float, row_scales_dev: *const c_void,
        output_f16_dev: *mut c_void, M: c_int, K: c_int, stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_ternary_gemv_sherry_f16(
        packed_weights_dev: *const c_void, activations_i8_dev: *const c_void,
        activation_scale: c_float, row_scales_dev: *const c_void,
        output_f16_dev: *mut c_void, M: c_int, K: c_int, stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_ternary_gemv_tq1_halo_f16(
        packed_weights_dev: *const c_void, activations_i8_dev: *const c_void,
        activation_scale: c_float, row_scales_dev: *const c_void,
        output_f16_dev: *mut c_void, M: c_int, K_padded: c_int,
        stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_quantize_fp16_to_i8(
        x_fp16_dev: *const c_void, x_i8_dev: *mut c_void,
        scale_dev: *mut c_float, K: c_int, stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_rmsnorm_fp16(
        x_dev: *const c_void, weight_dev: *const c_void, y_dev: *mut c_void,
        eps: c_float, K: c_int, stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_rope_fp16(
        x_dev: *mut c_void, pos: c_int, theta: c_float,
        num_heads: c_int, head_dim: c_int, stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_silu_glu_fp16(
        up_dev: *const c_void, gate_dev: *const c_void, y_dev: *mut c_void,
        N: c_int, stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_relu2_glu_fp16(
        gate_dev: *const c_void, up_dev: *const c_void, y_dev: *mut c_void,
        N: c_int, stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_relu2_glu_rmsnorm_fp16(
        gate_dev: *const c_void, up_dev: *const c_void,
        ffn_sub_norm_dev: *const c_void, y_dev: *mut c_void,
        eps: c_float, N: c_int, stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_embedding_lookup_fp16(
        embedding_dev: *const c_void, token_id: c_int, y_dev: *mut c_void,
        hidden: c_int, stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_residual_add_fp16(
        y_dev: *mut c_void, src_dev: *const c_void, N: c_int,
        stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_residual_add_fp32_from_fp16(
        x_fp32_dev: *mut c_void, src_fp16_dev: *const c_void, N: c_int,
        stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_rmsnorm_fp32_in_fp16_out(
        x_fp32_dev: *const c_void, weight_dev: *const c_void,
        y_fp16_dev: *mut c_void, eps: c_float, K: c_int, stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_argmax_fp32(
        logits_dev: *const c_void, out_idx_dev: *mut c_void, V: c_int,
        stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_fp16_gemv(
        W_dev: *const c_void, x_dev: *const c_void, y_dev: *mut c_void,
        M: c_int, K: c_int, stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_fp32_to_fp16(
        x_fp32_dev: *const c_void, y_fp16_dev: *mut c_void, N: c_int,
        stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_top_k_fp32(
        logits_dev: *mut c_void, k: c_int, V: c_int, stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_softmax_fp32(
        logits_dev: *mut c_void, V: c_int, temperature: c_float,
        stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_sample_multinomial_fp32(
        probs_dev: *const c_void, r: c_float, out_idx_dev: *mut c_void,
        V: c_int, stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_kv_cache_attn_decode(
        Q_dev: *const c_void, K_dev: *const c_void, V_dev: *const c_void,
        out_dev: *mut c_void,
        num_q_heads: c_int, num_kv_heads: c_int, head_dim: c_int,
        seq_len: c_int, scale: c_float, stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_kv_cache_attn_decode_fd(
        Q_dev: *const c_void, K_dev: *const c_void, V_dev: *const c_void,
        out_dev: *mut c_void,
        num_q_heads: c_int, num_kv_heads: c_int, head_dim: c_int,
        seq_len: c_int, scale: c_float, stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_kv_cache_attn_prefill(
        Q_dev: *const c_void, K_dev: *const c_void, V_dev: *const c_void,
        out_dev: *mut c_void,
        num_q_heads: c_int, num_kv_heads: c_int, head_dim: c_int,
        seq_len: c_int, scale: c_float, stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_kv_cache_attn_decode_i8(
        Q_dev: *const c_void,
        K_i8_dev: *const c_void, V_i8_dev: *const c_void,
        K_scales_fp16_dev: *const c_void, V_scales_fp16_dev: *const c_void,
        out_dev: *mut c_void,
        num_q_heads: c_int, num_kv_heads: c_int, head_dim: c_int,
        seq_len: c_int, scale: c_float, stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_kv_cache_attn_prefill_i8(
        Q_dev: *const c_void,
        K_i8_dev: *const c_void, V_i8_dev: *const c_void,
        K_scales_fp16_dev: *const c_void, V_scales_fp16_dev: *const c_void,
        out_dev: *mut c_void,
        num_q_heads: c_int, num_kv_heads: c_int, head_dim: c_int,
        seq_len: c_int, scale: c_float, stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_quantize_fp16_to_i8_rowscale(
        x_fp16_dev: *const c_void, out_i8_dev: *mut c_void,
        scale_fp16_out_dev: *mut c_void,
        num_rows: c_int, row_len: c_int, stream: *mut c_void
    ) -> rcpp_status_t);

    stub_fn!(rcpp_standalone_gemm(
        A_dev: *const c_void, B_dev_packed: *const c_void, C_dev: *mut c_void,
        M: c_int, N: c_int, K: c_int, stream: *mut c_void
    ) -> rcpp_status_t);
}

#[cfg(not(feature = "link-rocm"))]
pub use stub::*;
